fix shift on radix context

--- a/src/global.css
+++ b/src/global.css
@@ -189,6 +189,10 @@
     scrollbar-gutter: stable;
   }
 
+  html body[data-scroll-locked] {
+    --removed-body-scroll-bar-size: 0 !important;
+    margin-right: 0 !important;
+  }
   :is(p, pre, ul, ol, table, blockquote, aside, hr, figure, .paragraph) {
     margin: 0;
     font-size: var(--body);
